--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="project-card">
             <h3>02 Laboratory Exercise 1</h3>
-            <p></p>
+            <img src="agawa.png" alt="project card">
             
         </div>
 
@@ -67,3 +67,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
