--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="project-card">
             <h3>02 Laboratory Exercise 1</h3>
-            <img src="agawa.png" alt="project card">
+            <img src="agawa.png" alt="project card" style="width:300px; height:auto;">
             
         </div>
 
@@ -67,4 +67,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
