--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2>Projects</h2>
 
         <div class="project-card">
-            <h3>02 Laboratory Exercise 1</h3>
+            <h3>01 Activity 1</h3>
             <img src="agawa.png" alt="project card" style="width:300px; height:auto;">
             
         </div>
@@ -67,5 +67,6 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
