--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         </div>
 
         <div class="project-card">
-            <h3>Project 2</h3>
-            <p>Short description of the project.</p>
+            <h3>04 Laboratory Exercise 2</h3>
+             <img src="Agawa (2).png" alt="project card" style="width:300px; height:auto;">
             
         </div>
     </section>
@@ -67,6 +67,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
