--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section id="about" class="about">
         <h2>About Me</h2>
         <p>
-            I am Edijalynn Agawa, 18 years old, from Balatas, Naga City, and a student of Naga COllege Foundation Inc.
+            I am Edijalynn Agawa, 18 years old, from Balatas, Naga City, and a student of Naga College Foundation Inc.
         </p>
     </section>
 
@@ -67,6 +67,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
