--- a/index.html
+++ b/index.html
@@ -44,7 +44,11 @@
         <div class="project-card">
             <h3>01 Activity 1</h3>
             <img src="agawa.png" alt="project card" style="width:300px; height:auto;">
-            
+        </div>
+        
+            <div class="project-card">
+            <h3>02 Laboratory Exercise 1</h3>
+            <img src="jaja.png" alt="project card" style="width:300px; height:auto;">  
         </div>
 
         <div class="project-card">
@@ -67,6 +71,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
