--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </section>
 
     <section id="projects" class="projects">
-        <h2>Web Programming "Activities"</h2>
+        <h2>Web Programming 1 "Activities"</h2>
 
         <div class="project-card">
             <h3>01 Activity 1</h3>
@@ -70,6 +70,7 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
 
 
